--- a/src/Components/Arrivals/Arrivals.css
+++ b/src/Components/Arrivals/Arrivals.css
@@ -1,5 +1,17 @@
 
 .Arrivals{
     border: 10px solid blue;
-    height: 150px;
+    height: 450px;
+}
+
+.carousel-inner{
+    height: 400px;
+    width: 100%;
+    
+}
+
+.image{
+    background-size: contain;
+    height: 400px;
+    width: 100%;
 }
