--- a/src/Components/Deals/Deals.css
+++ b/src/Components/Deals/Deals.css
@@ -1,4 +1,24 @@
+
+
 .Deals{
-    border: 10px solid rgb(36, 126, 183);
-    height: 150px;
+    position: relative;
+    border: 5px solid green;
+    
+}
+
+.DealsInner{
+    height: 5%;
+    width: 100%;
+}
+
+.carousel-inner{
+    height: 400px;
+    width: 100%;
+    
+}
+
+.image{
+    background-size: contain;
+    height: 400px;
+    width: 100%;
 }
